--- a/package.json
+++ b/package.json
@@ -1,69 +1,35 @@
 {
-  "name": "auto-messenger-bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "ws3-fca",
+  "version": "^1.9.1",
+  "description": "A Facebook Messenger Bot",
   "main": "index.js",
-  "scripts": { 
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "axios": "^1.6.5",
-    "bluebird": "^2.11.0",
-    "body-parser": "^1.20.2",
-    "chalk": "^3.0.0",
-    "cheerio": "^0.22.0",
-    "child_process": "^1.0.2",
+    "axios": "^1.6.7",
+    "canvas": "^2.11.2",
+    "chalk": "^4.1.2",
+    "child_process": "",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "decimal.js": "^10.5.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "hercai": "^12.2.0",
-    "https-proxy-agent": "^4.0.0",
-    "mqtt": "^3.0.0",
-    "node-cron": "^3.0.3",
-    "node-fetch": "^3.2.6",
-    "npmlog": "^1.2.0",
-    "pastebin-api": "^7.0.0",
-    "request": "^2.53.0",
-    "websocket-stream": "^5.5.0",
-    "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.4"
-  },
-  "devDependencies": {
-    "eslint": "^7.5.0",
-    "mocha": "^7.0.1",
-    "prettier": "^1.11.1"
-  },
-  "eslintConfig": {
-    "env": {
-      "commonjs": true,
-      "es2021": true,
-      "node": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": 13
-    },
-    "rules": {
-      "no-prototype-builtins": 0,
-      "no-unused-vars": 1,
-      "comma-dangle": 1,
-      "no-redeclare": 0,
-      "prefer-const": 1,
-      "no-useless-escape": 0,
-      "no-mixed-spaces-and-tabs": 0,
-      "semi": 1,
-      "no-useless-catch": 0,
-      "no-empty": 0,
-      "use-isnan": 0,
-      "no-extra-semi": 1,
-      "no-async-promise-executor": 0,
-      "no-unreachable": 1,
-      "valid-typeof": 0,
-      "no-case-declarations": 0
-    }
+    "express-rate-limit": "^6.7.0",
+    "ffmpeg-static": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^11.3.0",
+    "form-data": "",
+    "helmet": "^6.0.0",
+    "js-yaml": "^4.1.0",
+    "moment-timezone": "^0.5.38",
+    "mongoose": "^7.5.0",
+    "node-cron": "^3.0.2",
+    "node-fetch": "",
+    "rapido-fca": "^1.0.0",
+    "semver": "^7.3.8",
+    "string-similarity": "^4.0.4",
+    "os": ""
   }
 }
